[aliases]
test=pytest

[tool:pytest]
env =
  SETTINGS_FILE_FOR_DYNACONF=clairvoyance/settings.toml

[metadata]
description_file = README.md

[flake8]
max-line-length = 88
exclude = .git,.hg,.svn,test,setup.py,__pycache__
ignore = B006,W503,E203

[isort]
profile=black
src_paths=['clairvoyance', 'clairvoyance/tests/units']
float_to_top=true
known_first_party=clairvoyance
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

### Coverage settings (equivalent to .coveragerc)
[coverage:run]
# Only run coverage on our source code not on 3rd party libs
source = clairvoyance
omit = .tox/*
       setup.py
       *conftest.py
       tests/*
branch = True
concurrency = multiprocessing
parallel = True
data_file = clairvoyance/tests/results/coverage

[coverage:report]
# Fail if coverage is <70%
fail_under=70
